--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#97;&#x69;&#x6c;t&#111;&#58;&#x73;&#x75;&#112;&#112;&#111;&#114;&#x74;&#64;&#x76;&#105;&#x76;a&#114;&#x61;&#x64;&#111;&#46;&#x63;&#x6f;m">&#x73;&#x75;&#112;&#112;&#111;&#114;&#x74;&#64;&#x76;&#105;&#x76;a&#114;&#x61;&#x64;&#111;&#46;&#x63;&#x6f;m</a></li>
+<li>VivaRado <a href="&#x6d;&#x61;&#x69;&#x6c;t&#111;:&#x73;&#x75;&#x70;&#x70;&#x6f;&#x72;&#x74;&#64;&#x76;&#105;&#118;&#x61;&#114;&#97;&#x64;&#111;.&#99;&#111;&#x6d;">&#x73;&#x75;&#x70;&#x70;&#x6f;&#x72;&#x74;&#64;&#x76;&#105;&#118;&#x61;&#114;&#97;&#x64;&#111;.&#99;&#111;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="m&#x61;&#105;&#x6c;&#116;&#x6f;&#58;&#x6d;&#106;&#x6c;&#97;&#103;a&#116;&#x74;&#x75;&#x74;&#x61;&#64;&#103;&#x6d;&#x61;&#x69;&#x6c;&#46;&#99;&#x6f;&#109;">&#x6d;&#106;&#x6c;&#97;&#103;a&#116;&#x74;&#x75;&#x74;&#x61;&#64;&#103;&#x6d;&#x61;&#x69;&#x6c;&#46;&#99;&#x6f;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;&#x6c;&#x74;&#111;&#x3a;m&#106;l&#x61;&#x67;a&#116;&#116;&#117;t&#97;&#64;&#103;ma&#x69;&#108;&#46;&#99;&#x6f;&#109;">m&#106;l&#x61;&#x67;a&#116;&#116;&#117;t&#97;&#64;&#103;ma&#x69;&#108;&#46;&#99;&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -972,8 +972,7 @@
 
 <hr />
 
-<p>An example of what we are planning in terms of the new Black MO (Original Master)
-and new Wide MO.</p>
+<p>An example of what we are planning in terms of the new Black MO (Original Master) and new Wide MO. The wide version is planned to be <strong>20% Wider</strong> compared to the current normal and the black version is planned to be <strong>60% Bolder</strong> compared to the current bold.</p>
 
 <p><img src="assets/media/adv_nm_wd_bld_blk.svg" alt="adv<em>nrm</em>wde<em>bld</em>blk" /></p>
 
@@ -1473,7 +1472,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="m&#97;&#105;&#x6c;&#x74;&#x6f;&#x3a;&#x73;u&#112;&#112;&#111;&#x72;&#116;&#64;&#x76;&#105;&#x76;a&#114;&#97;&#100;&#111;&#x2e;&#x63;&#x6f;&#109;">&#x73;u&#112;&#112;&#111;&#x72;&#116;&#64;&#x76;&#105;&#x76;a&#114;&#97;&#100;&#111;&#x2e;&#x63;&#x6f;&#109;</a></li>
+<li><a href="&#109;&#x61;&#105;l&#116;&#x6f;:&#x73;&#117;&#112;&#x70;&#111;&#114;&#x74;&#64;&#118;&#x69;&#x76;&#x61;&#x72;&#x61;&#100;&#111;&#46;&#x63;&#111;&#x6d;">&#x73;&#117;&#112;&#x70;&#111;&#114;&#x74;&#64;&#118;&#x69;&#x76;&#x61;&#x72;&#x61;&#100;&#111;&#46;&#x63;&#111;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
