--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#x61;&#x69;&#x6c;t&#111;:&#x73;&#x75;&#x70;&#x70;&#x6f;&#x72;&#x74;&#64;&#x76;&#105;&#118;&#x61;&#114;&#97;&#x64;&#111;.&#99;&#111;&#x6d;">&#x73;&#x75;&#x70;&#x70;&#x6f;&#x72;&#x74;&#64;&#x76;&#105;&#118;&#x61;&#114;&#97;&#x64;&#111;.&#99;&#111;&#x6d;</a></li>
+<li>VivaRado <a href="&#x6d;&#97;&#x69;&#108;&#116;&#111;&#x3a;&#115;&#x75;&#x70;&#x70;&#x6f;&#x72;&#x74;&#x40;&#x76;i&#118;&#97;&#114;a&#100;&#111;&#x2e;&#x63;&#x6f;&#x6d;">&#115;&#x75;&#x70;&#x70;&#x6f;&#x72;&#x74;&#x40;&#x76;i&#118;&#97;&#114;a&#100;&#111;&#x2e;&#x63;&#x6f;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;&#x6c;&#x74;&#111;&#x3a;m&#106;l&#x61;&#x67;a&#116;&#116;&#117;t&#97;&#64;&#103;ma&#x69;&#108;&#46;&#99;&#x6f;&#109;">m&#106;l&#x61;&#x67;a&#116;&#116;&#117;t&#97;&#64;&#103;ma&#x69;&#108;&#46;&#99;&#x6f;&#109;</a></li>
+<li>Michael LaGattuta <a href="m&#x61;&#x69;&#x6c;&#x74;&#111;&#58;&#x6d;&#106;&#108;&#x61;&#x67;&#97;t&#116;&#x75;&#116;&#x61;&#64;&#x67;&#x6d;&#97;il&#x2e;&#x63;o&#109;">&#x6d;&#106;&#108;&#x61;&#x67;&#97;t&#116;&#x75;&#116;&#x61;&#64;&#x67;&#x6d;&#97;il&#x2e;&#x63;o&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1317,7 +1317,9 @@ later you can export to Componentized UFOs.</p>
 
 <p>Overview:</p>
 
-<p>At this point we are waiting a PR and in April we can start the planning for Advent 4 that is the inclusion of Cyrillic.</p>
+<p><strong>2019-04-14</strong>:</p>
+
+<p>We updated Autokern to python3 allowing it to still function in python2, a very important step as it will be used for kerning throughout all the new weights and widths. We have overviewed and identified the glyph sets and encoding NAMs we are going to use for the extension to scripts like cyrillic. We have an understanding of what are the contour alterations that will allow for the new masters, like wide and black in terms of percentage of alteration and we have initiated the design of some glyphs during.</p>
 
 <pre><span></span><code class='codehilite mermaid'>gantt
         dateFormat  YYYY-MM-DD
@@ -1472,7 +1474,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#x61;&#105;l&#116;&#x6f;:&#x73;&#117;&#112;&#x70;&#111;&#114;&#x74;&#64;&#118;&#x69;&#x76;&#x61;&#x72;&#x61;&#100;&#111;&#46;&#x63;&#111;&#x6d;">&#x73;&#117;&#112;&#x70;&#111;&#114;&#x74;&#64;&#118;&#x69;&#x76;&#x61;&#x72;&#x61;&#100;&#111;&#46;&#x63;&#111;&#x6d;</a></li>
+<li><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#x3a;&#115;&#x75;&#112;&#112;&#111;&#x72;t&#64;&#118;&#x69;v&#97;&#114;&#97;&#x64;&#x6f;&#x2e;&#99;o&#109;">&#115;&#x75;&#112;&#112;&#111;&#x72;t&#64;&#118;&#x69;v&#97;&#114;&#97;&#x64;&#x6f;&#x2e;&#99;o&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
