--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.008 | 2019/05/01</title>
+		<title>VRD | Advent | 3.009 | 2019/05/01</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;&#x69;&#x6c;&#x74;&#x6f;&#58;&#x73;&#x75;&#x70;&#112;o&#114;&#x74;&#64;&#x76;&#x69;&#118;&#97;&#114;&#x61;&#x64;&#111;&#x2e;&#99;&#x6f;&#109;">&#x73;&#x75;&#x70;&#112;o&#114;&#x74;&#64;&#x76;&#x69;&#118;&#97;&#114;&#x61;&#x64;&#111;&#x2e;&#99;&#x6f;&#109;</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#x69;&#108;&#x74;&#111;&#58;&#x73;&#117;&#112;&#112;&#x6f;&#x72;&#116;&#x40;vi&#118;&#97;&#114;a&#x64;&#x6f;.&#99;&#111;&#x6d;">&#x73;&#117;&#112;&#112;&#x6f;&#x72;&#116;&#x40;vi&#118;&#97;&#114;a&#x64;&#x6f;.&#99;&#111;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#x61;&#105;&#x6c;&#x74;&#111;&#58;&#109;&#106;l&#97;&#x67;&#x61;&#x74;&#116;&#117;&#116;a&#64;&#103;&#x6d;&#x61;&#x69;l&#x2e;&#99;&#111;&#109;">&#109;&#106;l&#97;&#x67;&#x61;&#x74;&#116;&#117;&#116;a&#64;&#103;&#x6d;&#x61;&#x69;l&#x2e;&#99;&#111;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#x61;&#105;&#x6c;&#116;&#111;&#x3a;&#x6d;&#x6a;&#108;&#97;&#x67;&#97;&#x74;t&#117;&#116;&#x61;&#64;&#x67;&#x6d;&#97;&#x69;&#108;&#46;&#99;&#x6f;&#109;">&#x6d;&#x6a;&#108;&#97;&#x67;&#97;&#x74;t&#117;&#116;&#x61;&#64;&#x67;&#x6d;&#97;&#x69;&#108;&#46;&#99;&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1619,7 +1619,7 @@ ADV-0004-0008-0001 4 SE Cyrillic:                                    crit, des36
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#97;&#x69;&#108;&#116;o&#58;&#115;&#x75;&#x70;&#x70;&#111;&#x72;&#116;&#64;&#x76;&#x69;&#118;&#x61;&#114;&#x61;&#100;&#111;&#x2e;&#x63;&#x6f;&#109;">&#115;&#x75;&#x70;&#x70;&#111;&#x72;&#116;&#64;&#x76;&#x69;&#118;&#x61;&#114;&#x61;&#100;&#111;&#x2e;&#x63;&#x6f;&#109;</a></li>
+<li><a href="&#109;&#97;&#105;&#108;&#x74;&#x6f;&#58;&#x73;&#117;&#112;&#x70;&#x6f;&#114;&#116;&#x40;&#118;i&#118;&#97;&#114;&#97;&#100;&#111;&#x2e;&#x63;&#111;&#x6d;">&#x73;&#117;&#112;&#x70;&#x6f;&#114;&#116;&#x40;&#118;i&#118;&#97;&#114;&#97;&#100;&#111;&#x2e;&#x63;&#111;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
