--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.009 | 2019/05/01</title>
+		<title>VRD | Advent | 3.010 | 2019/05/02</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;&#x69;&#108;&#x74;&#111;&#58;&#x73;&#117;&#112;&#112;&#x6f;&#x72;&#116;&#x40;vi&#118;&#97;&#114;a&#x64;&#x6f;.&#99;&#111;&#x6d;">&#x73;&#117;&#112;&#112;&#x6f;&#x72;&#116;&#x40;vi&#118;&#97;&#114;a&#x64;&#x6f;.&#99;&#111;&#x6d;</a></li>
+<li>VivaRado <a href="&#109;a&#x69;&#108;&#116;&#111;&#x3a;&#x73;&#117;&#112;&#112;&#111;&#114;&#116;&#64;&#118;i&#118;&#x61;&#114;&#x61;&#x64;&#111;&#x2e;&#x63;&#111;&#109;">&#x73;&#117;&#112;&#112;&#111;&#114;&#116;&#64;&#118;i&#118;&#x61;&#114;&#x61;&#x64;&#111;&#x2e;&#x63;&#111;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#x61;&#105;&#x6c;&#116;&#111;&#x3a;&#x6d;&#x6a;&#108;&#97;&#x67;&#97;&#x74;t&#117;&#116;&#x61;&#64;&#x67;&#x6d;&#97;&#x69;&#108;&#46;&#99;&#x6f;&#109;">&#x6d;&#x6a;&#108;&#97;&#x67;&#97;&#x74;t&#117;&#116;&#x61;&#64;&#x67;&#x6d;&#97;&#x69;&#108;&#46;&#99;&#x6f;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;&#108;&#x74;&#x6f;&#58;m&#x6a;&#108;&#97;&#x67;&#x61;&#x74;&#x74;u&#x74;&#97;&#64;&#x67;&#x6d;&#97;&#105;&#x6c;&#46;&#99;&#111;&#109;">m&#x6a;&#108;&#97;&#x67;&#x61;&#x74;&#x74;u&#x74;&#97;&#64;&#x67;&#x6d;&#97;&#105;&#x6c;&#46;&#99;&#111;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1348,17 +1348,16 @@ ADV-0004-0008-0001 Advent 4 Script Extension Cyrillic (SeC) Planning:      des28
 #
 section Advent 3 SE Cyrillic
 
-ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29, 2019-04-27, 12d
-    ADV-0003-0008-0001-0001 Advent SeC MO:                         active, des30, 2019-04-27, 9d
-        SeC MO 1 reg (04/27 to 04/30):                               done, des39, 2019-04-27, 3d
-            MO reg Capital:                                          done, des31, 2019-04-27, 5h
-            MO reg Capital 39/39:                                    done, des31, 2019-04-28, 5h
-            MO reg SmallCase 9/45:                                   done, des31, 2019-04-28, 1h
-            MO reg SmallCase 45/45:                                  done, des62, 2019-04-29, 4h
-        3 SeC MO 2 thn (04/30 to 05/03):                           active, des40, after des39, 3d
-            MO reg Capital 15/39, SmallCase 17/45:                   done, des63, 2019-05-01, 4h
-            MO reg Capital 27/39, SmallCase 21/45:                         des64, 2019-05-02, 4h
-            MO reg Capital 39/39, SmallCase 45/45:                         des64, 2019-05-03, 4h
+ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29, 2019-04-27, 11d
+    ADV-0003-0008-0001-0001 Advent SeC MO:                         active, des30, 2019-04-27,  8d
+        SeC MO 1 reg (04/27 to 04/30):                               done, des39, 2019-04-27,  3d
+            MO reg Capital:                                          done, des31, 2019-04-27,  5h
+            MO reg Capital 39/39:                                    done, des31, 2019-04-28,  5h
+            MO reg SmallCase 9/45:                                   done, des31, 2019-04-28,  1h
+            MO reg SmallCase 45/45:                                  done, des62, 2019-04-29,  4h
+        3 SeC MO 2 thn (04/30 to 05/03):                             done, des40, after des39, 2d
+            MO reg Capital 15/39, SmallCase 17/45:                   done, des63, 2019-05-01,  4h
+            MO reg Capital 39/39, SmallCase 45/45:                   done, des64, 2019-05-02,  2h
         3 SeC MO 3 bld:                                                    des41, after des40, 3d
 
     ADV-0003-0008-0001-0001 SeC MG:                                        des32, after des30, 3d
@@ -1619,7 +1618,7 @@ ADV-0004-0008-0001 4 SE Cyrillic:                                    crit, des36
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#97;&#105;&#108;&#x74;&#x6f;&#58;&#x73;&#117;&#112;&#x70;&#x6f;&#114;&#116;&#x40;&#118;i&#118;&#97;&#114;&#97;&#100;&#111;&#x2e;&#x63;&#111;&#x6d;">&#x73;&#117;&#112;&#x70;&#x6f;&#114;&#116;&#x40;&#118;i&#118;&#97;&#114;&#97;&#100;&#111;&#x2e;&#x63;&#111;&#x6d;</a></li>
+<li><a href="&#109;&#x61;&#x69;&#x6c;&#x74;&#111;&#x3a;&#x73;&#117;&#112;&#x70;&#111;&#x72;&#x74;&#64;&#118;&#x69;&#x76;&#x61;r&#97;&#x64;&#x6f;&#x2e;&#99;&#111;&#109;">&#x73;&#117;&#112;&#x70;&#111;&#x72;&#x74;&#64;&#118;&#x69;&#x76;&#x61;r&#97;&#x64;&#x6f;&#x2e;&#99;&#111;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
