--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.017 | 2019/05/15</title>
+		<title>VRD | Advent | 3.017 | 2019/05/16</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;a&#x69;&#108;&#116;&#111;&#x3a;&#115;&#x75;&#x70;&#112;&#111;&#x72;&#116;&#x40;&#118;i&#x76;&#x61;&#114;&#97;&#100;&#x6f;.&#99;&#111;&#x6d;">&#115;&#x75;&#x70;&#112;&#111;&#x72;&#116;&#x40;&#118;i&#x76;&#x61;&#114;&#97;&#100;&#x6f;.&#99;&#111;&#x6d;</a></li>
+<li>VivaRado <a href="&#109;&#x61;i&#108;&#116;o&#x3a;&#115;&#x75;&#112;p&#x6f;&#114;t&#64;&#x76;i&#118;&#97;&#114;a&#x64;&#x6f;&#46;&#x63;&#x6f;&#109;">&#115;&#x75;&#112;p&#x6f;&#114;t&#64;&#x76;i&#118;&#97;&#114;a&#x64;&#x6f;&#46;&#x63;&#x6f;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#x61;&#x69;&#108;&#x74;o:m&#x6a;&#108;&#x61;&#x67;&#97;&#116;&#116;u&#x74;&#x61;&#64;&#103;&#x6d;&#97;&#105;&#108;&#x2e;&#x63;o&#109;">m&#x6a;&#108;&#x61;&#x67;&#97;&#116;&#116;u&#x74;&#x61;&#64;&#103;&#x6d;&#97;&#105;&#108;&#x2e;&#x63;o&#109;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;&#105;&#108;&#116;&#x6f;:&#x6d;j&#x6c;&#x61;&#103;&#x61;&#x74;&#x74;&#x75;&#116;&#x61;&#64;&#x67;&#109;ai&#108;&#46;&#99;&#111;&#109;">&#x6d;j&#x6c;&#x61;&#103;&#x61;&#x74;&#x74;&#x75;&#116;&#x61;&#64;&#x67;&#109;ai&#108;&#46;&#99;&#111;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1696,7 +1696,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="m&#x61;&#x69;&#x6c;&#116;&#111;&#58;&#x73;&#x75;&#112;&#x70;&#x6f;&#114;&#116;&#64;&#118;&#x69;&#118;&#x61;r&#97;&#x64;&#x6f;&#46;&#99;&#x6f;m">&#x73;&#x75;&#112;&#x70;&#x6f;&#114;&#116;&#64;&#118;&#x69;&#118;&#x61;r&#97;&#x64;&#x6f;&#46;&#99;&#x6f;m</a></li>
+<li><a href="&#109;&#x61;&#105;&#108;&#116;&#111;&#x3a;&#x73;&#117;&#x70;&#112;&#111;&#x72;t&#64;&#118;&#105;&#118;&#97;&#114;&#x61;d&#111;&#x2e;&#x63;&#x6f;&#109;">&#x73;&#117;&#x70;&#112;&#111;&#x72;t&#64;&#118;&#105;&#118;&#97;&#114;&#x61;d&#111;&#x2e;&#x63;&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
