--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#97;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#115;u&#x70;&#x70;&#x6f;&#x72;&#116;&#64;&#118;&#105;&#x76;&#97;&#114;a&#100;&#x6f;&#x2e;&#99;&#x6f;&#109;">&#115;u&#x70;&#x70;&#x6f;&#x72;&#116;&#64;&#118;&#105;&#x76;&#97;&#114;a&#100;&#x6f;&#x2e;&#99;&#x6f;&#109;</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#105;&#108;&#x74;&#111;&#x3a;&#115;&#x75;&#112;&#x70;&#x6f;&#114;&#116;&#x40;v&#x69;&#118;&#x61;&#x72;&#97;d&#111;.c&#111;&#109;">&#115;&#x75;&#112;&#x70;&#x6f;&#114;&#116;&#x40;v&#x69;&#118;&#x61;&#x72;&#97;d&#111;.c&#111;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;&#x6c;&#x74;&#x6f;&#58;mj&#x6c;a&#103;&#x61;&#x74;&#116;&#117;&#116;&#x61;&#64;&#103;&#109;&#97;&#105;&#108;.&#x63;o&#x6d;">mj&#x6c;a&#103;&#x61;&#x74;&#116;&#117;&#116;&#x61;&#64;&#103;&#109;&#97;&#105;&#108;.&#x63;o&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;&#105;&#108;&#x74;&#x6f;&#58;&#109;&#106;&#108;&#x61;g&#97;&#x74;&#x74;&#x75;&#116;&#97;&#64;&#x67;&#109;&#97;i&#108;&#x2e;&#99;&#x6f;&#109;">&#109;&#106;&#108;&#x61;g&#97;&#x74;&#x74;&#x75;&#116;&#97;&#64;&#x67;&#109;&#97;i&#108;&#x2e;&#99;&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1421,7 +1421,7 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
         3 SeC MO 3 bld:                                              done, des41, after des40, 3d
             MO bld Capital 39/39, SmallCase 45/45:                   done, des65, 2019-05-05,  5h
 
-    ADV-0003-0008-0001-0002 Advent SeC MO Integration of vectors:  active, des58, after des30, 10d
+    ADV-0003-0008-0001-0002 Advent SeC MO Integration of vectors:  active, des58, after des30, 11d
         3 SeC MO 1 thn:                                              done, des64, after des30, 3d
             MO thn Capitals:                                         done, des59, 2019-05-07,  5h
             MO thn LowerCase:                                        done, des62, 2019-05-08,  5h
@@ -1696,7 +1696,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#x61;&#105;&#x6c;&#116;&#x6f;&#x3a;&#115;&#117;&#x70;&#x70;&#111;&#x72;t&#64;&#118;&#x69;v&#97;r&#x61;&#100;&#x6f;&#46;&#99;&#x6f;&#109;">&#115;&#117;&#x70;&#x70;&#111;&#x72;t&#64;&#118;&#x69;v&#97;r&#x61;&#100;&#x6f;&#46;&#99;&#x6f;&#109;</a></li>
+<li><a href="&#x6d;&#x61;&#x69;&#108;&#x74;&#111;&#x3a;&#x73;&#x75;&#x70;&#x70;&#111;r&#x74;&#64;&#118;&#105;&#x76;&#97;&#x72;&#97;&#x64;&#111;.&#99;&#111;&#x6d;">&#x73;&#x75;&#x70;&#x70;&#111;r&#x74;&#64;&#118;&#105;&#x76;&#97;&#x72;&#97;&#x64;&#111;.&#99;&#111;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
