--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;&#105;&#108;&#x74;&#111;&#x3a;&#115;&#x75;&#112;&#x70;&#x6f;&#114;&#116;&#x40;v&#x69;&#118;&#x61;&#x72;&#97;d&#111;.c&#111;&#109;">&#115;&#x75;&#112;&#x70;&#x6f;&#114;&#116;&#x40;v&#x69;&#118;&#x61;&#x72;&#97;d&#111;.c&#111;&#109;</a></li>
+<li>VivaRado <a href="&#x6d;&#97;&#105;&#108;&#116;&#x6f;&#x3a;s&#117;&#112;&#112;&#111;&#x72;t&#64;&#x76;&#x69;&#118;&#97;&#x72;&#x61;&#100;&#111;.&#x63;&#111;&#x6d;">s&#117;&#112;&#112;&#111;&#x72;t&#64;&#x76;&#x69;&#118;&#97;&#x72;&#x61;&#100;&#111;.&#x63;&#111;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;&#105;&#108;&#x74;&#x6f;&#58;&#109;&#106;&#108;&#x61;g&#97;&#x74;&#x74;&#x75;&#116;&#97;&#64;&#x67;&#109;&#97;i&#108;&#x2e;&#99;&#x6f;&#109;">&#109;&#106;&#108;&#x61;g&#97;&#x74;&#x74;&#x75;&#116;&#97;&#64;&#x67;&#109;&#97;i&#108;&#x2e;&#99;&#x6f;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#x61;&#105;&#108;&#116;o&#58;&#x6d;&#x6a;&#108;&#x61;&#x67;&#x61;&#116;&#x74;ut&#x61;&#x40;&#103;&#109;&#97;&#105;&#x6c;&#x2e;&#99;&#x6f;&#x6d;">&#x6d;&#x6a;&#108;&#x61;&#x67;&#x61;&#116;&#x74;ut&#x61;&#x40;&#103;&#109;&#97;&#105;&#x6c;&#x2e;&#99;&#x6f;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1421,7 +1421,7 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
         3 SeC MO 3 bld:                                              done, des41, after des40, 3d
             MO bld Capital 39/39, SmallCase 45/45:                   done, des65, 2019-05-05,  5h
 
-    ADV-0003-0008-0001-0002 Advent SeC MO Integration of vectors:  active, des58, after des30, 11d
+    ADV-0003-0008-0001-0002 Advent SeC MO Integration of vectors:  active, des58, after des30, 10d
         3 SeC MO 1 thn:                                              done, des64, after des30, 3d
             MO thn Capitals:                                         done, des59, 2019-05-07,  5h
             MO thn LowerCase:                                        done, des62, 2019-05-08,  5h
@@ -1696,7 +1696,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#x61;&#x69;&#108;&#x74;&#111;&#x3a;&#x73;&#x75;&#x70;&#x70;&#111;r&#x74;&#64;&#118;&#105;&#x76;&#97;&#x72;&#97;&#x64;&#111;.&#99;&#111;&#x6d;">&#x73;&#x75;&#x70;&#x70;&#111;r&#x74;&#64;&#118;&#105;&#x76;&#97;&#x72;&#97;&#x64;&#111;.&#99;&#111;&#x6d;</a></li>
+<li><a href="&#109;&#x61;&#x69;&#108;&#x74;o&#58;&#x73;&#x75;&#x70;&#x70;&#111;&#114;&#116;&#x40;&#x76;&#105;&#118;ar&#97;&#100;&#111;&#x2e;&#99;&#x6f;&#x6d;">&#x73;&#x75;&#x70;&#x70;&#111;&#114;&#116;&#x40;&#x76;&#105;&#118;ar&#97;&#100;&#111;&#x2e;&#99;&#x6f;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
