--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.017 | 2019/05/16</title>
+		<title>VRD | Advent | 3.018 | 2019/05/16</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;&#x69;&#x6c;&#116;o&#58;&#x73;&#x75;&#112;&#x70;&#x6f;&#114;&#116;&#64;&#x76;&#105;&#118;&#97;&#x72;&#97;&#100;&#x6f;&#46;c&#x6f;&#x6d;">&#x73;&#x75;&#112;&#x70;&#x6f;&#114;&#116;&#64;&#x76;&#105;&#118;&#97;&#x72;&#97;&#100;&#x6f;&#46;c&#x6f;&#x6d;</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#x69;&#x6c;&#116;&#111;&#58;&#x73;&#x75;&#112;&#x70;&#111;&#x72;&#x74;&#x40;&#x76;&#x69;&#x76;&#97;&#x72;a&#100;&#x6f;&#x2e;&#99;&#111;&#x6d;">&#x73;&#x75;&#112;&#x70;&#111;&#x72;&#x74;&#x40;&#x76;&#x69;&#x76;&#97;&#x72;a&#100;&#x6f;&#x2e;&#99;&#111;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="m&#97;&#105;&#x6c;&#116;&#111;&#58;m&#106;l&#97;&#103;a&#x74;&#x74;&#x75;&#x74;&#x61;&#x40;&#103;&#x6d;&#x61;&#105;l&#46;&#x63;&#111;&#109;">m&#106;l&#97;&#103;a&#x74;&#x74;&#x75;&#x74;&#x61;&#x40;&#103;&#x6d;&#x61;&#105;l&#46;&#x63;&#111;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#109;a&#x69;&#108;&#116;&#111;:&#109;jl&#97;&#x67;&#97;&#x74;&#116;&#x75;&#116;&#97;&#64;&#103;&#x6d;&#x61;&#x69;&#x6c;&#x2e;&#99;&#111;&#109;">&#109;jl&#97;&#x67;&#97;&#x74;&#116;&#x75;&#116;&#97;&#64;&#103;&#x6d;&#x61;&#x69;&#x6c;&#x2e;&#99;&#111;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1430,9 +1430,10 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
             MO reg 16/39 Capitals:                                   done, des59, 2019-05-09,  6h
             MO reg Capitals:                                         done, des67, 2019-05-10,  6h
             MO reg Complete:                                         done, des68, 2019-05-11,  8h
-        3 SeC MO 2 bld:                                            active, des66, after des65, 4d
+        3 SeC MO 3 bld:                                              done, des66, after des65, 4d
             MO bld 24/39 Capitals:                                   done, des69, 2019-05-14,  4h
             MO bld All Capitals:                                     done, des70, 2019-05-15,  2h
+            MO bld Complete:                                         done, des71, 2019-05-16,  5h
 
     ADV-0003-0008-0001-0001 SeC MG:                                        des32, after des58, 3d
         3 SeC MG 1 reg_it:                                                 des42, after des58, 1d
@@ -1696,7 +1697,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="m&#x61;&#105;&#x6c;&#116;o:&#115;&#117;&#112;&#x70;&#x6f;&#114;&#116;&#x40;&#x76;&#105;&#118;&#97;&#x72;&#x61;d&#x6f;&#x2e;&#99;&#x6f;&#109;">&#115;&#117;&#112;&#x70;&#x6f;&#114;&#116;&#x40;&#x76;&#105;&#118;&#97;&#x72;&#x61;d&#x6f;&#x2e;&#99;&#x6f;&#109;</a></li>
+<li><a href="&#x6d;&#97;&#x69;&#x6c;to:&#115;u&#x70;&#112;&#111;r&#x74;&#x40;&#118;&#x69;&#x76;&#97;&#x72;&#x61;&#x64;&#111;&#46;&#x63;&#111;&#109;">&#115;u&#x70;&#112;&#111;r&#x74;&#x40;&#118;&#x69;&#x76;&#97;&#x72;&#x61;&#x64;&#111;&#46;&#x63;&#111;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
