--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;&#x69;&#x6c;&#116;&#111;&#58;&#x73;&#x75;&#112;&#x70;&#111;&#x72;&#x74;&#x40;&#x76;&#x69;&#x76;&#97;&#x72;a&#100;&#x6f;&#x2e;&#99;&#111;&#x6d;">&#x73;&#x75;&#112;&#x70;&#111;&#x72;&#x74;&#x40;&#x76;&#x69;&#x76;&#97;&#x72;a&#100;&#x6f;&#x2e;&#99;&#111;&#x6d;</a></li>
+<li>VivaRado <a href="&#109;&#x61;i&#x6c;&#x74;&#111;&#x3a;&#115;&#x75;&#112;&#112;&#x6f;&#114;&#116;&#x40;&#118;&#105;v&#97;&#x72;&#x61;&#x64;&#x6f;&#x2e;&#x63;&#111;&#109;">&#115;&#x75;&#112;&#112;&#x6f;&#114;&#116;&#x40;&#118;&#105;v&#97;&#x72;&#x61;&#x64;&#x6f;&#x2e;&#x63;&#111;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;a&#x69;&#108;&#116;&#111;:&#109;jl&#97;&#x67;&#97;&#x74;&#116;&#x75;&#116;&#97;&#64;&#103;&#x6d;&#x61;&#x69;&#x6c;&#x2e;&#99;&#111;&#109;">&#109;jl&#97;&#x67;&#97;&#x74;&#116;&#x75;&#116;&#97;&#64;&#103;&#x6d;&#x61;&#x69;&#x6c;&#x2e;&#99;&#111;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#x6d;&#x6a;&#108;&#97;&#103;&#97;&#116;&#x74;&#117;&#x74;&#97;&#64;&#103;&#109;&#97;&#105;&#x6c;&#x2e;&#x63;&#111;&#109;">&#x6d;&#x6a;&#108;&#97;&#103;&#97;&#116;&#x74;&#117;&#x74;&#97;&#64;&#103;&#109;&#97;&#105;&#x6c;&#x2e;&#x63;&#111;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1421,7 +1421,7 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
         3 SeC MO 3 bld:                                              done, des41, after des40, 3d
             MO bld Capital 39/39, SmallCase 45/45:                   done, des65, 2019-05-05,  5h
 
-    ADV-0003-0008-0001-0002 Advent SeC MO Integration of vectors:  active, des58, after des30, 10d
+    ADV-0003-0008-0001-0002 Advent SeC MO Integration of vectors:    done, des58, after des30, 10d
         3 SeC MO 1 thn:                                              done, des64, after des30, 3d
             MO thn Capitals:                                         done, des59, 2019-05-07,  5h
             MO thn LowerCase:                                        done, des62, 2019-05-08,  5h
@@ -1697,7 +1697,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#97;&#x69;&#x6c;to:&#115;u&#x70;&#112;&#111;r&#x74;&#x40;&#118;&#x69;&#x76;&#97;&#x72;&#x61;&#x64;&#111;&#46;&#x63;&#111;&#109;">&#115;u&#x70;&#112;&#111;r&#x74;&#x40;&#118;&#x69;&#x76;&#97;&#x72;&#x61;&#x64;&#111;&#46;&#x63;&#111;&#109;</a></li>
+<li><a href="m&#x61;&#105;&#x6c;&#116;&#x6f;:&#115;&#117;&#x70;p&#x6f;&#114;&#x74;&#64;&#x76;&#105;&#x76;&#97;&#114;&#x61;&#100;&#111;&#46;&#x63;&#111;&#x6d;">&#115;&#117;&#x70;p&#x6f;&#114;&#x74;&#64;&#x76;&#105;&#x76;&#97;&#114;&#x61;&#100;&#111;&#46;&#x63;&#111;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
