--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;i&#x6c;&#x74;&#111;&#x3a;&#115;&#x75;&#112;&#112;&#x6f;&#114;&#116;&#x40;&#118;&#105;v&#97;&#x72;&#x61;&#x64;&#x6f;&#x2e;&#x63;&#111;&#109;">&#115;&#x75;&#112;&#112;&#x6f;&#114;&#116;&#x40;&#118;&#105;v&#97;&#x72;&#x61;&#x64;&#x6f;&#x2e;&#x63;&#111;&#109;</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#x69;&#108;&#116;&#x6f;&#58;&#115;&#117;&#x70;&#x70;&#111;r&#116;&#x40;&#x76;&#x69;&#118;&#97;&#114;&#x61;&#100;&#111;&#46;&#99;&#x6f;&#x6d;">&#115;&#117;&#x70;&#x70;&#111;r&#116;&#x40;&#x76;&#x69;&#118;&#97;&#114;&#x61;&#100;&#111;&#46;&#99;&#x6f;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#x6d;&#x6a;&#108;&#97;&#103;&#97;&#116;&#x74;&#117;&#x74;&#97;&#64;&#103;&#109;&#97;&#105;&#x6c;&#x2e;&#x63;&#111;&#109;">&#x6d;&#x6a;&#108;&#97;&#103;&#97;&#116;&#x74;&#117;&#x74;&#97;&#64;&#103;&#109;&#97;&#105;&#x6c;&#x2e;&#x63;&#111;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#97;&#105;&#x6c;&#x74;&#x6f;&#x3a;&#x6d;&#x6a;&#x6c;&#97;&#x67;&#x61;&#x74;&#x74;&#117;&#x74;&#97;&#64;&#103;ma&#105;&#x6c;&#x2e;c&#111;&#x6d;">&#x6d;&#x6a;&#x6c;&#97;&#x67;&#x61;&#x74;&#x74;&#117;&#x74;&#97;&#64;&#103;ma&#105;&#x6c;&#x2e;c&#111;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1408,7 +1408,7 @@ ADV-0004-0008-0001 Advent 4 Script Extension Cyrillic (SeC) Planning:      des28
 #
 section Advent 3 SE Cyrillic
 
-ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29, 2019-04-27, 22d
+ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29, 2019-04-27, 23d
     ADV-0003-0008-0001-0001 Advent SeC MO:                           done, des30, 2019-04-27,  9d
         SeC MO 1 reg (04/27 to 04/30):                               done, des39, 2019-04-27,  3d
             MO reg Capital:                                          done, des31, 2019-04-27,  5h
@@ -1421,7 +1421,7 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
         3 SeC MO 3 bld:                                              done, des41, after des40, 3d
             MO bld Capital 39/39, SmallCase 45/45:                   done, des65, 2019-05-05,  5h
 
-    ADV-0003-0008-0001-0002 Advent SeC MO Integration of vectors:    done, des58, after des30, 10d
+    ADV-0003-0008-0001-0002 Advent SeC MO Integration of vectors:    done, des58, after des30, 11d
         3 SeC MO 1 thn:                                              done, des64, after des30, 3d
             MO thn Capitals:                                         done, des59, 2019-05-07,  5h
             MO thn LowerCase:                                        done, des62, 2019-05-08,  5h
@@ -1430,7 +1430,7 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
             MO reg 16/39 Capitals:                                   done, des59, 2019-05-09,  6h
             MO reg Capitals:                                         done, des67, 2019-05-10,  6h
             MO reg Complete:                                         done, des68, 2019-05-11,  8h
-        3 SeC MO 3 bld:                                              done, des66, after des65, 4d
+        3 SeC MO 3 bld:                                              done, des66, after des65, 5d
             MO bld 24/39 Capitals:                                   done, des69, 2019-05-14,  4h
             MO bld All Capitals:                                     done, des70, 2019-05-15,  2h
             MO bld Complete:                                         done, des71, 2019-05-16,  5h
@@ -1697,7 +1697,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="m&#x61;&#105;&#x6c;&#116;&#x6f;:&#115;&#117;&#x70;p&#x6f;&#114;&#x74;&#64;&#x76;&#105;&#x76;&#97;&#114;&#x61;&#100;&#111;&#46;&#x63;&#111;&#x6d;">&#115;&#117;&#x70;p&#x6f;&#114;&#x74;&#64;&#x76;&#105;&#x76;&#97;&#114;&#x61;&#100;&#111;&#46;&#x63;&#111;&#x6d;</a></li>
+<li><a href="&#109;&#97;i&#x6c;&#116;o:&#115;&#117;&#112;&#x70;&#x6f;&#114;&#116;&#x40;&#x76;&#x69;&#118;&#x61;&#x72;&#97;d&#x6f;&#x2e;&#x63;&#x6f;&#109;">&#115;&#117;&#112;&#x70;&#x6f;&#114;&#116;&#x40;&#x76;&#x69;&#118;&#x61;&#x72;&#97;d&#x6f;&#x2e;&#x63;&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
