--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.018 | 2019/05/16</title>
+		<title>VRD | Advent | 3.018 | 2019/05/17</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;&#x69;&#108;&#116;&#x6f;&#58;&#115;&#117;&#x70;&#x70;&#111;r&#116;&#x40;&#x76;&#x69;&#118;&#97;&#114;&#x61;&#100;&#111;&#46;&#99;&#x6f;&#x6d;">&#115;&#117;&#x70;&#x70;&#111;r&#116;&#x40;&#x76;&#x69;&#118;&#97;&#114;&#x61;&#100;&#111;&#46;&#99;&#x6f;&#x6d;</a></li>
+<li>VivaRado <a href="m&#x61;&#x69;&#x6c;&#x74;&#111;&#x3a;&#115;up&#x70;&#x6f;&#x72;&#116;&#x40;&#118;&#105;v&#97;&#114;&#x61;&#100;&#111;&#46;&#99;&#x6f;&#x6d;">&#115;up&#x70;&#x6f;&#x72;&#116;&#x40;&#118;&#105;v&#97;&#114;&#x61;&#100;&#111;&#46;&#99;&#x6f;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#97;&#105;&#x6c;&#x74;&#x6f;&#x3a;&#x6d;&#x6a;&#x6c;&#97;&#x67;&#x61;&#x74;&#x74;&#117;&#x74;&#97;&#64;&#103;ma&#105;&#x6c;&#x2e;c&#111;&#x6d;">&#x6d;&#x6a;&#x6c;&#97;&#x67;&#x61;&#x74;&#x74;&#117;&#x74;&#97;&#64;&#103;ma&#105;&#x6c;&#x2e;c&#111;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;&#x69;&#108;&#116;&#111;&#58;&#109;&#x6a;&#x6c;&#97;&#103;&#x61;&#x74;&#x74;&#117;&#116;&#97;&#x40;&#x67;&#x6d;&#97;&#x69;&#108;.&#99;&#x6f;&#x6d;">&#109;&#x6a;&#x6c;&#97;&#103;&#x61;&#x74;&#x74;&#117;&#116;&#97;&#x40;&#x67;&#x6d;&#97;&#x69;&#108;.&#99;&#x6f;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1436,7 +1436,7 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
             MO bld Complete:                                         done, des71, 2019-05-16,  5h
 
     ADV-0003-0008-0001-0001 SeC MG:                                        des32, after des58, 3d
-        3 SeC MG 1 reg_it:                                                 des42, after des58, 1d
+        3 SeC MG 1 reg_it:                                                 done,  after des58, 1d
         3 SeC MG 2 thn_it:                                                 des43, after des42, 1d
         3 SeC MG 3 bld_it:                                                 des44, after des43, 1d
 #
@@ -1697,7 +1697,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#97;i&#x6c;&#116;o:&#115;&#117;&#112;&#x70;&#x6f;&#114;&#116;&#x40;&#x76;&#x69;&#118;&#x61;&#x72;&#97;d&#x6f;&#x2e;&#x63;&#x6f;&#109;">&#115;&#117;&#112;&#x70;&#x6f;&#114;&#116;&#x40;&#x76;&#x69;&#118;&#x61;&#x72;&#97;d&#x6f;&#x2e;&#x63;&#x6f;&#109;</a></li>
+<li><a href="&#109;&#x61;&#x69;&#108;&#x74;&#111;&#58;s&#117;&#112;&#x70;&#x6f;&#114;&#116;&#x40;&#118;&#105;&#118;&#x61;&#114;&#97;&#x64;&#x6f;&#x2e;&#99;&#111;&#x6d;">s&#117;&#112;&#x70;&#x6f;&#114;&#116;&#x40;&#118;&#105;&#118;&#x61;&#114;&#97;&#x64;&#x6f;&#x2e;&#99;&#111;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
