--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.018 | 2019/05/17</title>
+		<title>VRD | Advent | 3.019 | 2019/05/17</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="m&#x61;&#x69;&#x6c;&#x74;&#111;&#x3a;&#115;up&#x70;&#x6f;&#x72;&#116;&#x40;&#118;&#105;v&#97;&#114;&#x61;&#100;&#111;&#46;&#99;&#x6f;&#x6d;">&#115;up&#x70;&#x6f;&#x72;&#116;&#x40;&#118;&#105;v&#97;&#114;&#x61;&#100;&#111;&#46;&#99;&#x6f;&#x6d;</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#105;&#x6c;&#116;&#111;&#58;&#115;&#117;&#x70;&#x70;&#111;&#x72;&#116;&#64;&#118;&#x69;v&#97;&#114;&#97;&#100;&#x6f;&#x2e;&#x63;&#111;&#x6d;">&#115;&#117;&#x70;&#x70;&#111;&#x72;&#116;&#64;&#118;&#x69;v&#97;&#114;&#97;&#100;&#x6f;&#x2e;&#x63;&#111;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;&#x69;&#108;&#116;&#111;&#58;&#109;&#x6a;&#x6c;&#97;&#103;&#x61;&#x74;&#x74;&#117;&#116;&#97;&#x40;&#x67;&#x6d;&#97;&#x69;&#108;.&#99;&#x6f;&#x6d;">&#109;&#x6a;&#x6c;&#97;&#103;&#x61;&#x74;&#x74;&#117;&#116;&#97;&#x40;&#x67;&#x6d;&#97;&#x69;&#108;.&#99;&#x6f;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;a&#105;&#108;&#x74;&#111;&#x3a;&#109;&#x6a;&#x6c;&#97;&#x67;&#x61;&#116;&#x74;&#117;&#x74;&#97;&#64;&#x67;&#109;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;&#x6d;">&#109;&#x6a;&#x6c;&#97;&#x67;&#x61;&#116;&#x74;&#117;&#x74;&#97;&#64;&#x67;&#109;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1697,7 +1697,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#x61;&#x69;&#108;&#x74;&#111;&#58;s&#117;&#112;&#x70;&#x6f;&#114;&#116;&#x40;&#118;&#105;&#118;&#x61;&#114;&#97;&#x64;&#x6f;&#x2e;&#99;&#111;&#x6d;">s&#117;&#112;&#x70;&#x6f;&#114;&#116;&#x40;&#118;&#105;&#118;&#x61;&#114;&#97;&#x64;&#x6f;&#x2e;&#99;&#111;&#x6d;</a></li>
+<li><a href="&#x6d;&#x61;&#x69;&#x6c;&#116;&#111;&#x3a;&#115;&#117;&#x70;&#x70;&#111;&#114;&#x74;&#x40;&#x76;&#105;&#118;&#x61;&#x72;&#x61;&#x64;o&#x2e;&#x63;&#111;&#109;">&#115;&#117;&#x70;&#x70;&#111;&#114;&#x74;&#x40;&#x76;&#105;&#118;&#x61;&#x72;&#x61;&#x64;o&#x2e;&#x63;&#111;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
